fix content width on small screens

--- a/static/main.css
+++ b/static/main.css
@@ -4,7 +4,8 @@ body {
 }
 
 #content {
-  width: 1000px;
+  max-width: 1000px;
+  min-width: 600px;
   padding: 10px;
   margin: auto;
 }
